// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do change capitalization of arbritary nested types 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"tests_test_A231270F\\": {
        \\"name\\": \\"bar\\",
        \\"nested_type\\": {
          \\"tag\\": \\"isDowncased\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"tests_test_A231270F\\"
          }
        }
      }
    }
  }
}"
`;

exports[`do not change capitalization of tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"tests_test_A231270F\\": {
        \\"name\\": \\"bar\\",
        \\"tags\\": {
          \\"Tag\\": \\"isWorking\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"tests_test_A231270F\\"
          }
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_DBA94737\\": {
        \\"name\\": \\"foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test_DBA94737\\"
          }
        }
      }
    }
  }
}"
`;

exports[`provider setter 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_DBA94737\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test_DBA94737\\"
          }
        }
      }
    }
  }
}"
`;

exports[`serialize list interpolation 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"tests_test_A231270F\\": {
        \\"name\\": \\"bar\\",
        \\"names\\": \\"\${other_test_resource.tests_othertest_E4B4389F.names}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"tests_test_A231270F\\"
          }
        }
      }
    },
    \\"other_test_resource\\": {
      \\"tests_othertest_E4B4389F\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/othertest\\",
            \\"uniqueId\\": \\"tests_othertest_E4B4389F\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with provider alias 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      },
      {
        \\"access_key\\": \\"123\\",
        \\"alias\\": \\"foo\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_DBA94737\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test.foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test_DBA94737\\"
          }
        }
      }
    }
  }
}"
`;
